rebrand project name

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 coshi190:
   name: coshi190
-  title: Maintainer of OpenBBQ
+  title: Maintainer of CMswap
   url: https://github.com/coshi190
   image_url: https://github.com/coshi190.png
